no constructInterlinkVector in Miner